# crbm-reproducibility-report

./: README - Copy.md  README.md  crbm-generator.py  documentation_table.md  example-report.json  full-report.json  pyproject.toml  requirements.txt
generator/: ReportGenerator.py  __main__.py  _version.py  core.py
template/: template.tex
